--- a/016_Hypothesis_Test_1_sol.ipynb
+++ b/016_Hypothesis_Test_1_sol.ipynb
@@ -28,6 +28,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "＃ 假設檢驗\n",
+    "\n",
+    "### 機會 - 糖尿病患者和非糖尿病患者之間 BMI 的差異是合法的，還是偶然的？\n",
+    "\n",
+    "我們可以做一些測試，看看這種差異是否真實——原始平均值顯示出差異，\n",
+    "\n",
+    "但我們是否有足夠的數據和足夠的差異來說明存在真正的、有形的區別？ 首先，我們可以直觀地查看分佈。"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1084,7 +1098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
