--- a/017_Hypothesis_Test_2.ipynb
+++ b/017_Hypothesis_Test_2.ipynb
@@ -376,6 +376,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 如果有 3 個或更多樣本怎麼辦？\n",
+    "\n",
+    "我們可以使用方差分析——方差分析。 Anova 是方差分析的縮寫，可以被認為是 3+ 方式測試。 同樣，我們將查看任何一組的方法是否存在顯著差異。 我們的假設如下：\n",
+    "<ul>\n",
+    "<li>原假設 - 所有組均值相同。\n",
+    "<li>另類炒作。 - 至少一組有不同的意思\n",
+    "</ul>1\n",
+    "<b>注意：</b> - 如果一組與其他組不同，這只會給我們指示，它不會生成降序排列的所有差異列表或任何花哨的內容。\n",
+    "\n",
+    "方差分析是一個參數檢驗，有幾個假設：\n",
+    "<ul>\n",
+    "<li>數據是獨立的 - 觀察結果僅在一組中。\n",
+    "<li>數據正常。\n",
+    "<li>方差接近相等。\n",
+    "</ul>\n",
+    "\n",
+    "我們可以嘗試用當前數據對此進行測試，我們將尋找具有不同教育水平的群體之間的年齡是否存在顯著差異。\n",
+    "\n",
+    "使用稱為箱線圖的圖表可以很好地說明方差分析類型。 請記住 - 這些測試的目標是尋找不同樣本均值的差異，我們可以通過其中一張圖表很好地觀察這一點。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
