--- a/026_Logistic_Regression_Normalization_2.ipynb
+++ b/026_Logistic_Regression_Normalization_2.ipynb
@@ -22,12 +22,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Logistic Regression: StatsModels and Details of Regression\n",
     "\n",
-    "We can do some more logitic regression to make classification predictions, there's some things that we do to try to drive accuracy up, and some other work we can do to interpret the accuracy better. "
+    "We can do some more logitic regression to make classification predictions, there's some things that we do to try to drive accuracy up, and some other work we can do to interpret the accuracy better. \n",
+    "\n",
+    "# 邏輯回歸：統計模型和回歸細節\n",
+    "\n",
+    "我們可以做更多的邏輯回歸來進行分類預測，我們可以做一些事情來提高準確性，我們可以做一些其他的工作來更好地解釋準確性。"
    ]
   },
   {
@@ -82,6 +87,22 @@
     "With the statsmodels formula, we can save a little bit of data manipulation in exchange for writing out the feature names. Most notably, we can keep the Xs and Y together in the data, then when we write the formula, that does the 'splitting'. \n",
     "\n",
     "<b>Note:</b> like many functions, the train test split is able to handle data in different data structures. Here if we give it a dataframe it will allow us to keep the varaible names all the way through the statsmodels calculations. This is easy in this case because the x/y splitting in statsmodels is defined here by the formula, not the arrays we feed it. To some degree it is up to you exactly how you manage things like this, I personally like to keep data in a dataframe until we need to do the x/y split, then put the data into the two arrays. This will generally work with anything we use, so I don't need to worry about adjusting. You don't have to follow that, so if some other method makes sense, go for it. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## StatsModels 基於公式的邏輯回歸\n",
+    "\n",
+    "本書使用 forumla 方法調用 statsmodels，而當我們進行線性回歸時，我們使用“常規”方式。 對於邏輯回歸，我們可以嘗試使用這裡的公式。 與線性回歸一樣，statsmodels 為我們提供了一些更詳細的數據，我們可以查看這些數據以嘗試了解模型的有效性，例如每個特徵的 p 值。\n",
+    "\n",
+    "與線性回歸一樣，scikitlearn 與 statsmodels 與任何其他庫函數的比較完全取決於您。 他們做同樣的事情，所以使用你喜歡的東西。 就力學而言，SKlearn 更適合未來使用。\n",
+    "\n",
+    "使用 statsmodels 公式，我們可以節省一些數據操作，以換取寫出特徵名稱。 最值得注意的是，我們可以在數據中將 X 和 Y 放在一起，然後在編寫公式時進行“拆分”。\n",
+    "\n",
+    "<b>注意：</b> 與許多函數一樣，訓練測試拆分能夠處理不同數據結構中的數據。 在這裡，如果我們給它一個數據框，它將允許我們在 statsmodels 計算中一直保留可變名稱。 在這種情況下這很容易，因為 statsmodels 中的 x/y 拆分在這裡是由公式定義的，而不是我們提供給它的數組。 在某種程度上，這完全取決於您如何管理這樣的事情，我個人喜歡將數據保存在數據框中，直到我們需要進行 x/y 拆分，然後將數據放入兩個數組中。 這通常適用於我們使用的任何東西，所以我不需要擔心調整。 你不必遵循那個，所以如果其他一些方法有意義，那就去吧。"
    ]
   },
   {
@@ -275,6 +296,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,6 +313,19 @@
     "<li>Normalization: x = ( (x-min(x)) / (max(x)-min(x)) ) \n",
     "<li>Standardization: x = ( (x-mean(x)) / (std(x)) )\n",
     "</ul>\n",
+    "\n",
+    "# 特徵縮放\n",
+    "\n",
+    "特徵縮放包括幾種獲取數值並將其轉換為不同比例的類似方法。 有幾個，我們現在要看的幾個是：\n",
+    "<ul>\n",
+    "<li>歸一化 - 重新縮放數據，使所有值都在 0 和 1 之間。\n",
+    "<li>標準化 - 重新調整數據，使平均值為 0，標準差為 1。\n",
+    "</ul>\n",
+    "\n",
+    "這些都以類似的方式處理我們的數據——獲取原始數據，並使用轉換來改變其分佈。 這些縮放方法的計算是：\n",
+    "<ul>\n",
+    "<li>歸一化：x = ( (x-min(x)) / (max(x)-min(x)) )\n",
+    "<li>標準化：x = ( (x-mean(x)) / (std(x)) )\n",
     "\n",
     "![Scaling](images/scaling.png \"Scaling\")\n",
     "\n",
@@ -906,7 +941,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('ml3950')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -920,12 +955,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4d722d3adfa415172c1f5238b519fb86b488acdae450fd691ab06c09f4ca9173"
+    "hash": "40846f95e88ae24f681f7d79d7396bca459ce37b2ecada686cfbc3bbe9daaf0c"
    }
   }
  },
