--- a/029_Survival_sol.ipynb
+++ b/029_Survival_sol.ipynb
@@ -78,6 +78,44 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 生存分析\n",
+    "\n",
+    "生存分析是對我們期望某事持續或持續多長時間的檢查。 \n",
+    "\n",
+    "例如，我們希望某個人在確診後能活多久，我們希望客戶能繼續做客戶多長時間，或者我們希望某人能繼續工作多長時間。\n",
+    "\n",
+    "生存分析是我們可以使用我們的分佈數據對未來進行預測或推斷的另一種方式。 \n",
+    "\n",
+    "為了進行生存分析，我們需要兩個關鍵信息：\n",
+    "<ul>\n",
+    "<li> 時間的度量 - 它們持續了多長時間。\n",
+    "<li> “事件”的指示 - 每當生存事件發生時。 例如。 死亡、顧客離開、燈泡壞了。\n",
+    "</ul>\n",
+    "\n",
+    "如果我們有一個數據集顯示樣本中的記錄發生事件需要多長時間，\n",
+    "\n",
+    "我們可以根據該數據創建一個分佈來估計事件發生的時間，\n",
+    "\n",
+    "並且我們可以對該數據進行一些操作以創建一些特定於生存的數據 工具和技術。 一個\n",
+    "\n",
+    "### 分析類型\n",
+    "\n",
+    "我們將進行一些單變量生存分析，或者我們將使用一個變量——某物持續的時間。 \n",
+    "\n",
+    "事件變量更多地表明某事持續的時間現在已經結束，這並不是它真正的特徵。 \n",
+    "\n",
+    "儘管有點複雜，但可以使用更大的特徵集進行生存分析，就像回歸/分類一樣。 \n",
+    "\n",
+    "工作簿底部附近引用的生命線包為此提供了一些工具，我們<i>可能</i>在 ML 內容中使用它，\n",
+    "\n",
+    "這在很大程度上取決於我們需要為您的項目工作涵蓋的內容。"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1097,6 +1135,30 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 生存比較 - 隊列差異\n",
+    "\n",
+    "生存分析有用的一種方法是比較組——最明顯的是在諸如“治療組與未治療組的壽命有多長？”等場景中。\n",
+    "\n",
+    "我們可以按照我們想要的任何方式拆分數據，例如按性別，然後將這兩組數據相互比較，看看它們是否不同。 \n",
+    "\n",
+    "就像我們習慣的那樣，我們還可以在兩個隊列之間進行假設檢驗。 \n",
+    "\n",
+    "這通常是使用稱為對數秩檢驗的測試來完成的，該測試位於名為生命線的庫中，該庫提供了一堆生存分析資料。 \n",
+    "\n",
+    "測試本身是內部 Chi2 測試。 \n",
+    "\n",
+    "我們不會在這裡詳細介紹生命線，但對數秩檢驗實際上就像我們對分佈所做的 t 檢驗，\n",
+    "\n",
+    "它會生成一個 p 值，我們可以用它來確定我們是否有證據可說 隊列彼此不同。 \n",
+    "\n",
+    "在本工作簿的底部有一個使用 lifelines 包的測試示例，根據我們在假設測試方面的經驗，使用和理解它非常簡單。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -1941,7 +2003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
