--- a/031_Bayes_2_sol.ipynb
+++ b/031_Bayes_2_sol.ipynb
@@ -2450,6 +2450,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2461,7 +2462,17 @@
     "\n",
     "Next time we'll build these concepts up into a full blown predictive model algorithm, from scratch! \n",
     "\n",
-    "![Bayes](images/bayes.jpeg \"Bayes\")"
+    "![Bayes](images/bayes.jpeg \"Bayes\")\n",
+    "\n",
+    "## 結果和展望\n",
+    "\n",
+    "完成這些應該會在您的腦海中敲響警鐘——我們正在使用一系列功能來生成預測……\n",
+    "\n",
+    "您可能會猜到，貝葉斯是（一組）預測模型的基礎。 \n",
+    "\n",
+    "現在我們正在做樸素貝葉斯的一個版本，這是一種常見的簡單分類模型，通常用於垃圾郵件檢測之類的事情，因為它非常快。\n",
+    "\n",
+    "下次我們將從頭開始將這些概念構建到一個完整的預測模型算法中！"
    ]
   },
   {
@@ -3367,7 +3378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
