--- a/032_Bayes_Scratch_sol.ipynb
+++ b/032_Bayes_Scratch_sol.ipynb
@@ -34,6 +34,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 樸素貝葉斯 - 從零開始\n",
+    "\n",
+    "我們可以將具有多個特徵的貝葉斯更新的想法擴展到一個完整的預測模型中。 樸素貝葉斯是最簡單的預測算法之一，因為它只不過是我們可以手動計算的基於貝葉斯表的更新。\n",
+    "\n",
+    "我們將分兩步來看：\n",
+    "<ul>\n",
+    "<li> 創建一個稍微擴展的貝葉斯表更新，一次處理多個特徵。\n",
+    "<li> 將該概念擴展為完整的預測機器。\n",
+    "</ul>\n",
+    "\n",
+    "兩者之間的區別在於，在創建模型版本時，我們預先計算了所有可能需要的概率（訓練步驟），實際計算預測幾乎相同。"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,6 +175,20 @@
     "What is the probability of playing when the weather is <b>Sunny, Hot, Normal, False (wind)?</b>\n",
     "\n",
     "##### Build Table with Outcome Prior Probabilities"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 表貝葉斯更新\n",
+    "\n",
+    "我們可以通過製作更新表簡化版本來熱身製作我們的模型。\n",
+    "\n",
+    "當天氣為<b>Sunny, Hot, Normal, False (wind)時播放的概率是多少？</b>\n",
+    "\n",
+    "##### 用結果先驗概率建表"
    ]
   },
   {
@@ -497,6 +529,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 最後更新步驟\n",
+    "\n",
+    "在這次更新之後，我將保留後驗概率，因為我們已經完成了，並且我將放棄所有臨時先驗概率，因為我們對它們沒有用。 我們將保留可能性，因為這組可能性最終是我們生成預測所需的全部。\n",
+    "\n",
+    "注意最後的最終概率，無論是非歸一化概率還是後驗概率，我們的分類預測將是這些概率中較大的一個。 好吧，如果我們回顧實際的貝葉斯方程：\n",
+    "\n",
+    "![樸素貝葉斯](images/naive_bayes.png \"樸素貝葉斯\")\n",
+    "\n",
+    "該等式的分子就是先驗概率和所有可能性相乘，這就是我們擁有的一組值。 等式的分母對於任何結果都是相同的，所以我們考慮或忽略它都沒有關係——它所做的只是允許我們對概率進行歸一化，正如我們從表中看到的那樣，我們不需要 . 所以……我們可以通過計算所有這些可能性和先驗概率、相乘並選擇最大的結果來做出一般性的預測。\n",
+    "\n",
+    "<b> 樸素貝葉斯預測模型只是此模型的一般化形式。</b>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -620,6 +670,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -632,6 +683,10 @@
     "### Initialization\n",
     "\n",
     "The initialization step will just setup the pieces that we'll need. Here our initialization declares empty varaibles that will hold everything we calculate and figure out. \n",
+    "\n",
+    "初始化步驟將只設置我們需要的部分。 \n",
+    "\n",
+    "在這裡，我們的初始化聲明了空變量，它將保存我們計算和計算出的所有內容。\n",
     "\n",
     "### Train the Model\n",
     "\n",
