--- a/029_Survival_sol.ipynb
+++ b/029_Survival_sol.ipynb
@@ -547,6 +547,30 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 生存和 CDF\n",
+    "\n",
+    "生存的想法應該讓我們想起我們真正熟悉的東西——CDF。 \n",
+    "\n",
+    "回想一下，CDF 向我們展示了所有記錄中小於 X 值的百分比的累加； \n",
+    "\n",
+    "如果那個 X 值是時間，CDF 會告訴我們有多少東西比 X 持續時間短。\n",
+    "\n",
+    "所以我們的生存分析基本上是檢查時間變量的分佈。\n",
+    "\n",
+    "生存與此相反，或者更準確地說，是時間 CDF 的補充。 存活率是持續那麼久的百分比。 \n",
+    "\n",
+    "從數學上講，生存很簡單：1-cdf(x)。\n",
+    "\n",
+    "$ S(x) = 1 - CDF(x) $\n",
+    "\n",
+    "在視覺上，我們可以通過繪製 cdf、生存以及兩者的圖形來查看它們是如何相互作用的。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
