--- a/032_Bayes_Scratch_sol.ipynb
+++ b/032_Bayes_Scratch_sol.ipynb
@@ -339,6 +339,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####更新表\n",
+    "\n",
+    "我們將調整先前的更新步驟以處理多輪。 （這不是執行此操作的最有效方法，我們正在此處挖掘詳細信息。）\n",
+    "\n",
+    "我們將像以前一樣運行更新，這裡的更改是每次我將重命名舊的先驗值和似然值 ，\n",
+    "\n",
+    "因此我們將所有內容保存在一個更大的、不斷增長的表中。\n",
+    "\n",
+    "因為可能性都會相互成倍增加，所以我們稍後會保留所有這些值。\n",
+    "\n",
+    "<b>注意：</b>重命名模式是為了讓我們可以保留預期的列名並重用相同的更新函數。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -667,6 +685,37 @@
     "</ul>\n",
     "\n",
     "We are awesome!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "＃＃＃ 結果\n",
+    "\n",
+    "我們在這裡剩下的是一系列可能性，每個可能性都會修改我們的先驗概率。 \n",
+    "\n",
+    "如果我們很敏銳，我們還會注意到這一系列的可能性直接轉化為貝葉斯方程的頂部。 \n",
+    "\n",
+    "底部位總是相同的，我們只需要對其進行歸一化，因此預測的結果是哪個非歸一化概率較高。 \n",
+    "\n",
+    "這裡 4/189 比 4/875 更有可能，所以我們預測我們會玩。\n",
+    "\n",
+    "這就是我們的分類器需要做的所有事情！ \n",
+    "\n",
+    "我們只是採用先驗概率和所有可能性，將它們相乘，然後選擇最有可能的結果！！ 這應該很容易到位：\n",
+    "<ul>\n",
+    "<li> <b>擬合模型：</b>模型的訓練部分可以計算所有這些可能性和先驗概率。 \n",
+    "\n",
+    "每一個都只是簡單的數學運算，所以我們將計算所有這些並將它們存儲在某種列表（實際上是字典）中。\n",
+    "     <ul>\n",
+    "     <li> 例如 如果天氣晴朗，可以計算並保存打高爾夫球的可能性，如果有風，則可以計算不打高爾夫球的可能性等......\n",
+    "     </ul>\n",
+    "<li> <b>進行預測：</b> 預測部分只是從我們的預先計算值的字典中查找先驗和匹配可能性，然後進行數學計算。\n",
+    "</ul>\n",
+    "\n",
+    "我們很棒！"
    ]
   },
   {
@@ -2867,7 +2916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
