--- a/017_Hypothesis_Test_2_sol.ipynb
+++ b/017_Hypothesis_Test_2_sol.ipynb
@@ -700,6 +700,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 如果有 3 個或更多樣本怎麼辦？\n",
+    "\n",
+    "我們可以使用方差分析——方差分析。 Anova 是方差分析的縮寫，可以被認為是 3+ 方式測試。 \n",
+    "\n",
+    "同樣，我們將查看任何一組的方法是否存在顯著差異。 我們的假設如下：\n",
+    "<ul>\n",
+    "<li>原假設 - 所有組均值相同。\n",
+    "<li>另類炒作。 - 至少一組有不同的意思\n",
+    "</ul>\n",
+    "<b>注意：</b> - 如果一組與其他組不同，這只會給我們指示，它不會生成降序排列的所有差異列表或任何花哨的內容。\n",
+    "\n",
+    "方差分析是一個參數檢驗，有幾個假設：\n",
+    "<ul>\n",
+    "<li>數據是獨立的 - 觀察結果僅在一組中。\n",
+    "<li>數據正常。\n",
+    "<li>方差接近相等。\n",
+    "</ul>\n",
+    "\n",
+    "我們可以嘗試用當前數據對此進行測試，我們將尋找具有不同教育水平的群體之間的年齡是否存在顯著差異。\n",
+    "\n",
+    "使用稱為箱線圖的圖表可以很好地說明方差分析類型。 \n",
+    "\n",
+    "請記住 - 這些測試的目標是尋找不同樣本均值的差異，我們可以通過其中一張圖表很好地觀察這一點。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -727,6 +757,18 @@
     "### Variance Test\n",
     "\n",
     "We need to check the varaiances to be sure that this is going to work OK. We can run another test from scipy, called the Levene test. This test will evaluate if the varaiances of all the groups provided are equal, or if one (or more) of them differs. The null hypothesis that we are testing is \"there is no difference between the varaiances of the groups\". "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 方差檢驗\n",
+    "\n",
+    "我們需要檢查方差以確保它能正常工作。 我們可以從 scipy 運行另一個測試，稱為 Levene 測試。 \n",
+    "\n",
+    "該測試將評估提供的所有組的方差是否相等，或者其中一個（或多個）是否不同。 我們正在檢驗的原假設是“各組的方差之間沒有差異”。"
    ]
   },
   {
@@ -767,6 +809,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我們用上面的levene檢驗計算的“方差是否相等”的問題是另一個假設檢驗。 \n",
+    "\n",
+    "它返回一個 p 值，我們可以用它來拒絕/接受 NH。 在這種情況下，p 很高，所以我們不能拒絕 NH，並且方差可能非常相似。 耶！\n",
+    "\n",
+    "公式名稱是因為 ANOVA 使用所謂的 f 統計量來進行分析。 F 是兩個變量的比率，因此這就是方差分析名稱的來源。 \n",
+    "\n",
+    "它正在分析每個樣本內的變異到樣本之間的變異。 我們得到 f 統計量和 p 值。\n",
+    "\n",
+    "<b> F = 樣本間變量/樣本內變量</b>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -800,6 +858,18 @@
     "### Exercise\n",
     "\n",
     "Try to use any other data we have used that has 3+ categories. Slice the data and do an ANOVA on it to see if the means vary."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P 值高，我們不能拒絕 NH，因此組間均值看起來相等。 查看 F，這是有道理的，如果我們發現樣本彼此不同，則該比率會更高。 這種關係通常成立。\n",
+    "\n",
+    "＃＃＃ 鍛煉\n",
+    "\n",
+    "嘗試使用我們使用過的任何其他具有 3 個以上類別的數據。 切片數據並對其進行方差分析以查看均值是否不同。"
    ]
   },
   {
