--- a/017_Hypothesis_Test_2_sol.ipynb
+++ b/017_Hypothesis_Test_2_sol.ipynb
@@ -1031,6 +1031,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 如果數據不正常怎麼辦？\n",
+    "\n",
+    "上述測試假設數據是正常的。 如果不是呢？ 對於非正態數據，我們需要不同類型的檢驗，例如 Mann-Whitney。\n",
+    "\n",
+    "一般來說，非參數統計檢驗的工作方式與我們一直使用的檢驗方式相同。 \n",
+    "\n",
+    "我們失去的通常是某種程度的可靠性——參數測試在生成答案時使用分佈知識。 像這樣的 M-W 測試沒有那些可以依賴的假設，所以它們通常不能那麼好。 \n",
+    "\n",
+    "如果數據符合一種模式，通常是正常模式，或者很容易轉換為正常模式，則參數測試可能是更好的選擇。\n",
+    "\n",
+    "#### Mann-Whitney - 非參數 T 檢驗\n",
+    "\n",
+    "我們可以在這裡嘗試一個，機制並沒有太大的不同。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
