--- a/001_Basics_sol.ipynb
+++ b/001_Basics_sol.ipynb
@@ -240,14 +240,29 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Dataframe Columns and Info\n",
     "\n",
-    "Each variable, or feature as they are called in data science is stored in a column of our spreadsheet-like dataframe. In addition to their value (in this case df holds that table of data), variables are objects that have a certain type - i.e. here \"df\" is a dataframe type object. Objects, in addition to their data, can hold other values - attributes, as well as other \"capabilities\" - functions. \n",
+    "Each variable, or feature as they are called in data science is stored in a column of our spreadsheet-like dataframe. In addition to their value (in this case df holds that table of data), variables are objects that have a certain type - i.e. here \"df\" is a dataframe type object. \n",
     "\n",
-    "The .columns below is an attribute - columns is a list of the column names of the dataframe. Here we are asking for what value. "
+    "Objects, in addition to their data, can hold other values - attributes, \n",
+    "\n",
+    "as well as other \"capabilities\" - functions. \n",
+    "\n",
+    "The .columns below is an attribute - \n",
+    "\n",
+    "columns is a list of the column names of the dataframe. Here we are asking for what value. \n",
+    "\n",
+    "對象，除了它們的數據外，還可以保存其他值 - 屬性，\n",
+    "\n",
+    "以及其他“功能”  - 功能。\n",
+    "\n",
+    "下面的.columns是一個屬性 - \n",
+    "\n",
+    "列是DataFrame的列名列表。 在這裡，我們問什麼價值。"
    ]
   },
   {
@@ -276,10 +291,35 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also see a little more details on this... Info() is a function in the dataframe class, so any dataframe can have it called. Here when we call \"info()\" it will run some code on the object df that will generate the info printed below. "
+    "We can also see a little more details on this... Info() is a function in the dataframe class, so any dataframe can have it called. Here when we call \"info()\" it will run some code on the object df that will generate the info printed below. \n",
+    "\n",
+    "df. -- object\n",
+    "\n",
+    "df.column() -- object.attribute\n",
+    "\n",
+    "df.info() -- object.function()\n",
+    "\n",
+    "df.describe() -- object.function()\n",
+    "\n",
+    "df.describe(include = 'all') -- object.function()\n",
+    "\n",
+    "df.describe(include=\"all\").T -- another way around\n",
+    "\n",
+    "df.drop(column = ['Cabin'], inplace = True) -- drop a column and replace the old dataframe\n",
+    "\n",
+    "df.isnull() -- object.function()\n",
+    "\n",
+    "df.sum() -- object.function()\n",
+    "\n",
+    "df[\"Survived\"].value_counts() -- object.function()\n",
+    "\n",
+    "df[\"Cabin\"].value_counts().sort_values(ascending=False) -- object.function()\n",
+    "\n",
+    "df_1 = df [ df ['Pclass'] == 1 ] --new subset object = original [ CRITERIA ]\n"
    ]
   },
   {
@@ -388,7 +428,8 @@
    "source": [
     "#This also works, and is sometimes usefull if you're doing things like looping through data\n",
     "#It is probably more confusing in most cases though, so we won't use it.\n",
-    "#Survived is the second column, and in programming we (almost) always start counting at 0. So we are getting column #1\n",
+    "#Survived is the second column, and in programming we (almost) always start counting at 0. \n",
+    "# So we are getting column #1\n",
     "df.iloc[:,1]"
    ]
   },
@@ -881,7 +922,8 @@
     }
    ],
    "source": [
-    "#This time we're calling a function that exists inside our dataframe, so it is \"object.function()\". Note the brackets.\n",
+    "#This time we're calling a function that exists inside our dataframe, so it is \"object.function()\".\n",
+    "# Note the brackets.\n",
     "# Same deal, learn this in the other class.\n",
     "df.describe(include=\"all\")"
    ]
@@ -1226,6 +1268,20 @@
     "In programming talk, null means nothing (not 0, or blank, literally nothing). So, we are checking to see which columns have a bunch of missing values. In the table above the NaN (Not a Number) represents the same concept. \n",
     "\n",
     "In computer-speak, true/false values are called Boolean variables. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####值計數\n",
+    "\n",
+    "在編程談話中，零沒有任何意義（不是0或空白，實際上什麼都沒有）。 \n",
+    "\n",
+    "因此，我們正在檢查哪些列有很多缺失值。 在上表中，NAN（不是數字）表示相同的概念。\n",
+    "\n",
+    "在計算機說中，真/錯誤值稱為布爾變量。"
    ]
   },
   {
@@ -1616,6 +1672,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "177"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'].isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1626,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1738,7 @@
        "Name: Fare, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1776,7 @@
        "Name: Fare, Length: 90, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1720,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1808,7 @@
        "Name: Pclass, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,8 +1831,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###數據分割\n",
+    "\n",
+    "出於各種原因，我們通常希望將大型數據集分離為子集。 我們可以考慮以兩種方式切片框架：\n",
+    "<ul>\n",
+    "<li>通過列 - 垂直。 我們可以將一些數據列分開。\n",
+    "<li>行 - 水平。 我們可以切除滿足某些條件的數據行。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1985,7 @@
        "max    512.329200  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1910,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1938,7 +2027,7 @@
        "Name: Fare, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +2057,8 @@
       "50%       60.287500\n",
       "75%       93.500000\n",
       "max      512.329200\n",
-      "Name: Fare, dtype: float64\n",
+      "Name: Fare, dtype: float64 \n",
+      "\n",
       "count    184.000000\n",
       "mean      20.662183\n",
       "std       13.417399\n",
@@ -1977,7 +2067,8 @@
       "50%       14.250000\n",
       "75%       26.000000\n",
       "max       73.500000\n",
-      "Name: Fare, dtype: float64\n",
+      "Name: Fare, dtype: float64 \n",
+      "\n",
       "count    491.000000\n",
       "mean      13.675550\n",
       "std       11.778142\n",
@@ -1993,8 +2084,8 @@
    "source": [
     "#I'm wrapping all these in print statements. This'll force them all to print. \n",
     "#This is kind of ugly, but it'll do the job here. \n",
-    "print(df_1[\"Fare\"].describe())\n",
-    "print(df_2[\"Fare\"].describe())\n",
+    "print(df_1[\"Fare\"].describe(), '\\n')\n",
+    "print(df_2[\"Fare\"].describe(), '\\n')\n",
     "print(df_3[\"Fare\"].describe())"
    ]
   },
@@ -2012,7 +2103,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(216, 11)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "216"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2020,6 +2151,7 @@
      "output_type": "stream",
      "text": [
       "High Survive Rate: 0.6296296296296297\n",
+      "mid Survive Rate: 0.7391304347826086\n",
       "Low Survive Rate: 0.24236252545824846\n"
      ]
     }
@@ -2027,14 +2159,17 @@
    "source": [
     "## Code Here\n",
     "\n",
-    "#Note: for the stuff below, there's not necissarily one way to do things, especially as the data gets more complex.\n",
-    "#When we're exploring the data there's usually several ways to look for the insights, sometimes some are better than others.\n",
+    "#Note: for the stuff below, there's not necessarily one way to do things, especially as the data gets more complex.\n",
+    "#When we're exploring the data there's usually several ways to look for the insights, \n",
+    "# sometimes some are better than others.\n",
     "#What makes the most sense depends on the data, you'll get better at deciding with experience.\n",
     "\n",
     "high_survive = df_1[\"Survived\"].sum()\n",
+    "mid_survive = df_2[\"Survived\"].sum()\n",
     "low_survive = df_3[\"Survived\"].sum()\n",
     "\n",
     "print(\"High Survive Rate:\", high_survive/df_1.shape[0])\n",
+    "print(\"mid Survive Rate:\", high_survive/df_2.shape[0])\n",
     "print(\"Low Survive Rate:\", low_survive/df_3.shape[0])\n"
    ]
   },
@@ -2047,25 +2182,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Survived: 48.39540760233917\n",
-      "Dead: 22.117886885245877\n"
+      "Survived mean: 48.39540760233917\n",
+      "Dead mean: 22.117886885245877\n"
      ]
     }
    ],
    "source": [
     "# Code Here\n",
     "surv_fare = df[df[\"Survived\"] == 1]\n",
-    "print(\"Survived:\", surv_fare[\"Fare\"].mean())\n",
+    "print(\"Survived mean:\", surv_fare[\"Fare\"].mean())\n",
     "\n",
     "dead_fare = df[df[\"Survived\"] == 0]\n",
-    "print(\"Dead:\", dead_fare[\"Fare\"].mean())"
+    "print(\"Dead mean:\", dead_fare[\"Fare\"].mean())"
    ]
   },
   {
@@ -2079,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2088,24 +2223,23 @@
      "text": [
       "Women Survival Rate: 0.7420382165605095\n",
       "Men Survival Rate: 0.18890814558058924\n",
-      "Men Survival Rate: 0.5398230088495575\n"
+      "child Survival Rate: 0.5398230088495575\n"
      ]
     }
    ],
    "source": [
     "# Code Here\n",
     "women = df[df[\"Sex\"] == \"female\"]\n",
-    "men = df[df[\"Sex\"] == \"male\"]\n",
-    "kids = df[df[\"Age\"]< 18]\n",
-    "\n",
     "w_surv = women[women[\"Survived\"] == 1]\n",
     "print(\"Women Survival Rate:\", w_surv.shape[0]/women.shape[0])\n",
     "\n",
+    "men = df[df[\"Sex\"] == \"male\"]\n",
     "m_surv = men[men[\"Survived\"] == 1]\n",
     "print(\"Men Survival Rate:\", m_surv.shape[0]/men.shape[0])\n",
     "\n",
+    "kids = df[df[\"Age\"]< 18]\n",
     "k_surv = kids[kids[\"Survived\"] == 1]\n",
-    "print(\"Men Survival Rate:\", k_surv.shape[0]/kids.shape[0])"
+    "print(\"child Survival Rate:\", k_surv.shape[0]/kids.shape[0])"
    ]
   },
   {
@@ -2119,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2343,7 @@
        "4    Male     149      61      3"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,15 +2360,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compare the distributions for Male and Female heights and weights. \n",
     "# 1. Compare the difference between mean and median for both height datasets - what does that reveal?\n",
     "# 2. Which of the weight datasets seems to be more \"compact\" vs. more \"spread out\"?\n",
-    "# 3. Look at the pandas documentation: https://pandas.pydata.org/docs/reference/index.html and try to do something else to the dataframe, \n",
-    "# preferably something you cna make sense of. This is just an intro to reading documentation - you can pick anything. Don't spend an eternity on this, just try. "
+    "# 3. Look at the pandas documentation: https://pandas.pydata.org/docs/reference/index.html \n",
+    "# and try to do something else to the dataframe, \n",
+    "# preferably something you cna make sense of. \n",
+    "# This is just an intro to reading documentation - you can pick anything. \n",
+    "# Don't spend an eternity on this, just try. "
    ]
   },
   {
@@ -2253,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2399,7 @@
        "Hist({7.0: 213, 8.0: 70, 26.0: 57, 13.0: 50, 10.0: 28, 15.0: 27, 9.0: 25, 14.0: 21, 27.0: 17, 0.0: 15, 30.0: 15, 31.0: 14, 39.0: 13, 12.0: 13, 16.0: 12, 21.0: 11, 6.0: 11, 29.0: 10, 24.0: 10, 52.0: 10, 20.0: 9, 56.0: 9, 69.0: 9, 11.0: 9, 23.0: 8, 18.0: 8, 19.0: 8, 25.0: 8, 79.0: 7, 46.0: 6, 34.0: 6, 35.0: 5, 73.0: 5, 55.0: 5, 53.0: 5, 83.0: 5, 77.0: 5, 90.0: 4, 33.0: 4, 120.0: 4, 227.0: 4, 263.0: 4, 211.0: 4, 151.0: 4, 110.0: 4, 78.0: 4, 57.0: 4, 76.0: 4, 22.0: 4, 86.0: 3, 512.0: 3, 61.0: 3, 17.0: 3, 41.0: 3, 153.0: 3, 135.0: 3, 113.0: 3, 51.0: 3, 49.0: 3, 71.0: 3, 106.0: 2, 134.0: 2, 93.0: 2, 65.0: 2, 37.0: 2, 89.0: 2, 133.0: 2, 32.0: 2, 80.0: 2, 164.0: 2, 82.0: 2, 108.0: 2, 91.0: 2, 50.0: 2, 28.0: 2, 66.0: 2, 36.0: 2, 262.0: 2, 146.0: 2, 247.0: 2, 47.0: 1, 63.0: 1, 42.0: 1, 40.0: 1, 38.0: 1, 221.0: 1, 59.0: 1, 81.0: 1, 4.0: 1, 75.0: 1, 5.0: 1}, 'Fare')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
