--- a/010_PDF_sol.ipynb
+++ b/010_PDF_sol.ipynb
@@ -1037,6 +1037,8 @@
     }
    ],
    "source": [
+    "# first graph shows the log income.\n",
+    "# second graph shows the normal income.\n",
     "fig, ax = plt.subplots(1,2)\n",
     "sns.distplot(df[\"log.annual.inc\"], kde_kws={\"color\":\"red\", \"label\":\"KDE\"}, hist_kws={\"label\":\"Data\"}, ax=ax[0])\n",
     "sns.distplot(df[\"income\"], kde_kws={\"color\":\"red\", \"label\":\"KDE\"}, hist_kws={\"label\":\"Data\"}, ax=ax[1])\n",
@@ -1061,7 +1063,33 @@
     "#Challenge - Create a function that takes an income and returns a tax bill, and marginal tax rate:\n",
     "def muhTaxes(income):\n",
     "    \n",
-    "    return taxbill, margRate"
+    "    return taxbill, margRate\n",
+    "\n",
+    "\n",
+    "\n",
+    "def bigGraph(df_in, columnName):\n",
+    "    data = pd.Series(df_in[columnName])\n",
+    "    hist = thinkstats2.Hist(data)\n",
+    "    pmf = thinkstats2.Pmf(data)\n",
+    "    cdf = thinkstats2.Cdf(data)\n",
+    "    pdf = thinkstats2.EstimatedPdf(data) #See more below\n",
+    "\n",
+    "    thinkplot.PrePlot(6, rows =2, cols=3)\n",
+    "    thinkplot.SubPlot(1, title=\"Hist\")\n",
+    "    thinkplot.Hist(hist)\n",
+    "    thinkplot.SubPlot(2, title=\"PMF\")\n",
+    "    thinkplot.Pmf(pmf)\n",
+    "    thinkplot.SubPlot(3, title=\"CDF\")\n",
+    "    thinkplot.Cdf(cdf)\n",
+    "    thinkplot.SubPlot(4, title=\"Prob Plot\")\n",
+    "    thinkstats2.NormalProbabilityPlot(data)\n",
+    "    thinkplot.SubPlot(5, title=\"Log PP\")\n",
+    "    thinkstats2.NormalProbabilityPlot(np.log(data))\n",
+    "    thinkplot.SubPlot(6, title=\"PDF\")\n",
+    "    thinkplot.Pdf(pdf)\n",
+    "    \n",
+    "    thinkplot.Config()\n",
+    "    return"
    ]
   },
   {
@@ -1088,6 +1116,34 @@
     "\n",
     "In general, we want to make data \"as easy as possible to analyze\", and making data normal (or sometimes transforming it in different ways, like normalization), often makes it easier. So we do it. "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 那麼……為什麼是log？\n",
+    "\n",
+    "快速思考——我們同時擁有日誌和非日誌數據\n",
+    "\n",
+    "（它們之間只有一個數學運算不同，所以我們總是可以來回翻譯或轉換），為什麼要為日誌煩惱呢？\n",
+    "\n",
+    "我們最終關心的是使用我們的數據進行推論，這意味著我們正在引入一些假設。 \n",
+    "\n",
+    "假設我們要使用數據來估計收入最低和最高五分位數之間的距離。 \n",
+    "\n",
+    "如果我們只關心樣本的數據，我們可以直接計數，不需要轉換。 \n",
+    "\n",
+    "如果我們試圖從我們的樣本推廣到總體（我們很快就會這樣做），\n",
+    "\n",
+    "使用正態分佈允許我們使用所有為處理正態分佈而構建的東西——在本例中是分割數據段。 \n",
+    "\n",
+    "類似地，當我們想要進行測試來衡量我們的數據（例如假設檢驗）時，其中許多測試都是專門為正常數據創建的。\n",
+    "\n",
+    "一般來說，我們希望讓數據“盡可能容易分析”，而使數據正常化（或者有時以不同的方式對其進行轉換，如規範化）\n",
+    "\n",
+    "通常會使分析變得更容易。 所以我們這樣做了。"
+   ]
   }
  ],
  "metadata": {
@@ -1106,7 +1162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
