--- a/020_linear_least_squares_sol.ipynb
+++ b/020_linear_least_squares_sol.ipynb
@@ -61,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1ea2ada2520>"
+       "<seaborn.axisgrid.FacetGrid at 0x182ce423220>"
       ]
      },
      "execution_count": 2,
@@ -422,7 +422,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1ea2eb74790>"
+       "<matplotlib.lines.Line2D at 0x182d5728430>"
       ]
      },
      "execution_count": 10,
@@ -1809,8 +1809,8 @@
       "Dep. Variable:                      y   R-squared:                       0.712\n",
       "Model:                            OLS   Adj. R-squared:                  0.711\n",
       "Method:                 Least Squares   F-statistic:                     1036.\n",
-      "Date:                Fri, 25 Nov 2022   Prob (F-statistic):          1.95e-115\n",
-      "Time:                        22:40:53   Log-Likelihood:                -1397.2\n",
+      "Date:                Sun, 15 Jan 2023   Prob (F-statistic):          1.95e-115\n",
+      "Time:                        12:38:33   Log-Likelihood:                -1397.2\n",
       "No. Observations:                 422   AIC:                             2798.\n",
       "Df Residuals:                     420   BIC:                             2807.\n",
       "Df Model:                           1                                         \n",
@@ -1999,7 +1999,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1ea3025d370>"
+       "<matplotlib.lines.Line2D at 0x182d57fd4c0>"
       ]
      },
      "execution_count": 33,
@@ -2056,8 +2056,8 @@
       "Dep. Variable:           Weight (lbs)   R-squared:                       0.509\n",
       "Model:                            OLS   Adj. R-squared:                  0.509\n",
       "Method:                 Least Squares   F-statistic:                 1.766e+04\n",
-      "Date:                Fri, 25 Nov 2022   Prob (F-statistic):               0.00\n",
-      "Time:                        22:40:54   Log-Likelihood:                -81671.\n",
+      "Date:                Sun, 15 Jan 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        12:38:35   Log-Likelihood:                -81671.\n",
       "No. Observations:               17021   AIC:                         1.633e+05\n",
       "Df Residuals:                   17019   BIC:                         1.634e+05\n",
       "Df Model:                           1                                         \n",
